--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios": "expo crash",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.11",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.3"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "~8.0.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "date-fns": "^2.30.0",
+    "expo": "~51.0.0",
+    "expo-status-bar": "~1.12.1",
+    "@expo/vector-icons": "~14.0.0",
+    "react": "18.2.0",
+    "react-native": "0.74.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
